--- a/.github/workflows/build_wheels_test.yml
+++ b/.github/workflows/build_wheels_test.yml
@@ -6,7 +6,7 @@ name: Testing_python_app
 # Run manually, 
 # see https://github.blog/changelog/2020-07-06-github-actions-manual-triggers-with-workflow_dispatch/
 on: 
-  workflow_dispatch
+  workflow_dispatch:
 
 # on: 
 #   push:
