--- a/.github/workflows/build_wheels_test.yml
+++ b/.github/workflows/build_wheels_test.yml
@@ -66,7 +66,8 @@ jobs:
         env:
           # Skip 32-bit builds
           # Disable building PyPy wheels on all platforms
-          CIBW_SKIP: "*-win32 *linux_i686 pp*"
+          # Disable building musllinux wheels on all platforms
+          CIBW_SKIP: "*-win32 *linux_i686 pp* *musllinux*"
           # Build `universal2` wheels on an Intel runner.
           CIBW_ARCHS_MACOS: x86_64 universal2
           # On an Linux Intel runner with qemu installed, build Intel and ARM wheels
